--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,4 @@
 ﻿{
-  "Data": {
-    "DefaultConnection": {
-      "ConnectionString": "Host=localhost;Username=postgres;Password=postgres;Database=mvc_test_asp"
-    }
-},
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
@@ -11,5 +6,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "DbContextSettings" :{
+    "ConnectionString" : "User ID=postgres;Password=postgres;Host=localhost;Port=5432;Database=TestDatabase;Pooling=true;"
   }
 }
