--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
     }
   },
   "DbContextSettings" :{
-    "ConnectionString" : "User ID=postgres;Password=postgres;Host=localhost;Port=5432;Database=TestDatabase;Pooling=true;"
+    "ConnectionString" : "User ID=test_asp;Password=test_asp;Host=localhost;Port=5432;Database=TestDatabase;Pooling=true;"
   }
 }
