--- a/MyMVCProject.csproj
+++ b/MyMVCProject.csproj
@@ -1,7 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <!--<CodeAnalysisRuleSet>stylecop.ruleset</CodeAnalysisRuleSet>-->
   </PropertyGroup>
+  <ItemGroup>
+    <AdditionalFiles Include="stylecop.json" />
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Dapper" Version="1.50.2" />
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
@@ -17,6 +21,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="1.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="1.0.0" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.0.0" />
+    <!--<PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />-->
   </ItemGroup>
 </Project>
