--- a/MyMVCProject.csproj
+++ b/MyMVCProject.csproj
@@ -1,7 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
-    <!--<CodeAnalysisRuleSet>stylecop.ruleset</CodeAnalysisRuleSet>-->
   </PropertyGroup>
   <ItemGroup>
     <AdditionalFiles Include="stylecop.json" />
@@ -23,6 +22,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="1.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="1.0.0" />
-    <!--<PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />-->
+    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
   </ItemGroup>
 </Project>
