--- a/MyMVCProject.csproj
+++ b/MyMVCProject.csproj
@@ -28,5 +28,9 @@
     <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="1.1.1" />
     <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="1.0.0-msbuild3-final" />
+    <DotNetCliToolReference Include="Microsoft.DotNet.Watcher.Tools" Version="1.0.1" />
+    <Watch Include="**\*.js" Exclude="node_modules\**\*;**\*.js.map;obj\**\*;bin\**\*" />
+    <Watch Include="**\*.css" Exclude="node_modules\**\*;**\*.min.css;obj\**\*;bin\**\*" />
+    <Watch Include="**\*.cshtml" Exclude="obj\**\*;bin\**\*" />
   </ItemGroup>
 </Project>
