Working on JSON code

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,7 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "ConnectionString": "User ID=dev;Password=dev;Host=db;Port=5432;Database=test_asp;Pooling=true;Timeout=1024;CommandTimeout=1024;",
+  "DefaultCulture": "en-US"
 }
