Code review fixes

--- a/Scripts/appsettings.Development.json
+++ b/Scripts/appsettings.Development.json
@@ -7,5 +7,5 @@
       "Microsoft": "Information"
     }
   },
-  "ConnectionString" : "UserId=your_postgress_user;Password=your_postgress_password;Host=localhost;Port=5432;Database=your_database_name;Pooling=true;"
+  "ConnectionString" : "User Id=your_postgress_user;Password=your_postgress_password;Host=localhost;Port=5432;Database=your_database_name;Pooling=true;"
 }
