--- a/NetCoreBootstrap.csproj
+++ b/NetCoreBootstrap.csproj
@@ -18,13 +18,14 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.1.0"/>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="1.0.0"/>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="1.1.0"/>
+    <PackageReference Include="Microsoft.Composition" Version="1.0.27" ExcludeAssets="All" />
+    <PackageReference Include="System.Composition" Version="1.0.31" />
+    <PackageReference Include="MailKit" Version="1.18.1.1" />
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.1"/>
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="1.0.0"/>
     <DotNetCliToolReference Include="Microsoft.DotNet.Watcher.Tools" Version="1.0.1"/>
     <Watch Include="**\*.js" Exclude="node_modules\**\*;**\*.js.map;obj\**\*;bin\**\*"/>
     <Watch Include="**\*.css" Exclude="node_modules\**\*;**\*.min.css;obj\**\*;bin\**\*"/>
     <Watch Include="**\*.cshtml" Exclude="obj\**\*;bin\**\*"/>
-    <PackageReference Include="Microsoft.Composition" Version="1.0.27" ExcludeAssets="All" />
-    <PackageReference Include="System.Composition" Version="1.0.31" />
   </ItemGroup>
 </Project>
