--- a/NetCoreBootstrap.csproj
+++ b/NetCoreBootstrap.csproj
@@ -1,26 +1,30 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Hangfire" Version="1.6.12" />
-    <PackageReference Include="Hangfire.PostgreSql" Version="1.4.7.1" />
-    <PackageReference Include="LocalizationCultureCore" Version="1.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.2" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="1.1.2" />
-    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
-    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="1.0.0" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="1.1.0" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="1.1.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.1.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="1.0.0" />
-    <DotNetCliToolReference Include="Microsoft.DotNet.Watcher.Tools" Version="1.0.1" />
-    <Watch Include="**\*.js" Exclude="node_modules\**\*;**\*.js.map;obj\**\*;bin\**\*" />
-    <Watch Include="**\*.css" Exclude="node_modules\**\*;**\*.min.css;obj\**\*;bin\**\*" />
-    <Watch Include="**\*.cshtml" Exclude="obj\**\*;bin\**\*" />
+    <PackageReference Include="Hangfire" Version="1.6.12"/>
+    <PackageReference Include="Hangfire.PostgreSql" Version="1.4.7.1"/>
+    <PackageReference Include="LocalizationCultureCore" Version="1.0.0"/>
+    <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.3"/>
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.2"/>
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.2"/>
+    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="1.1.2"/>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="1.1.0"/>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="1.1.1"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.1.0"/>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="1.0.0"/>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="1.1.0"/>
+    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.1"/>
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="1.0.0"/>
+    <DotNetCliToolReference Include="Microsoft.DotNet.Watcher.Tools" Version="1.0.1"/>
+    <Watch Include="**\*.js" Exclude="node_modules\**\*;**\*.js.map;obj\**\*;bin\**\*"/>
+    <Watch Include="**\*.css" Exclude="node_modules\**\*;**\*.min.css;obj\**\*;bin\**\*"/>
+    <Watch Include="**\*.cshtml" Exclude="obj\**\*;bin\**\*"/>
+    <PackageReference Include="Microsoft.Composition" Version="1.0.27" ExcludeAssets="All" />
+    <PackageReference Include="System.Composition" Version="1.0.31" />
   </ItemGroup>
 </Project>
