--- a/NetCoreBootstrap.csproj
+++ b/NetCoreBootstrap.csproj
@@ -18,10 +18,11 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.1.0"/>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="1.0.0"/>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="1.1.0"/>
-    <PackageReference Include="Microsoft.Composition" Version="1.0.27" ExcludeAssets="All" />
-    <PackageReference Include="System.Composition" Version="1.0.31" />
-    <PackageReference Include="MailKit" Version="1.18.1.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Composition" Version="1.0.27" ExcludeAssets="All"/>
+    <PackageReference Include="System.Composition" Version="1.0.31"/>
+    <PackageReference Include="MailKit" Version="1.18.1.1"/>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="1.1.1"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="1.1.2"/>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.1"/>
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="1.0.0"/>
     <DotNetCliToolReference Include="Microsoft.DotNet.Watcher.Tools" Version="1.0.1"/>
