--- a/NetCoreBootstrap.csproj
+++ b/NetCoreBootstrap.csproj
@@ -7,6 +7,7 @@
     <PackageReference Include="Hangfire.PostgreSql" Version="1.4.7.1" />
     <PackageReference Include="LocalizationCultureCore" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="2.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.0.0" />
