--- a/NetCoreBootstrap.csproj
+++ b/NetCoreBootstrap.csproj
@@ -24,7 +24,7 @@
     <PackageReference Include="System.Composition" Version="1.1.0"/>
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.4.0"/>
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta004"/>
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.0-beta1"/>
+    <PackageReference Include="Microsoft.CodeAnalysis" Version="2.6.0-beta1"/>
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0"/>
