Updated DockerFile (push directly to aws)

--- a/NetCoreBootstrap/Dockerfile
+++ b/NetCoreBootstrap/Dockerfile
@@ -1,11 +1,12 @@
 FROM microsoft/dotnet:2.0-sdk
 WORKDIR /app
+EXPOSE 80
 
-# copy csproj and restore as distinct layers
+# Copy csproj and restore as distinct layers
 COPY *.csproj ./
 RUN dotnet restore
 
-# copy and build everything else
+# Copy and build everything else
 COPY . ./
 RUN dotnet publish -c Release -o out
-CMD ASPNETCORE_URLS=http://*:$PORT dotnet out/NetCoreBootstrap.dll
+CMD ASPNETCORE_URLS=http://*:$PORT dotnet out/VistaprintIdentificationNetcore.dll
