fix-in-dockerfile

--- a/NetCoreBootstrap/Dockerfile
+++ b/NetCoreBootstrap/Dockerfile
@@ -9,4 +9,4 @@ RUN dotnet restore
 # Copy and build everything else
 COPY . ./
 RUN dotnet publish -c Release -o out
-CMD ASPNETCORE_URLS=http://*:$PORT dotnet out/VistaprintIdentificationNetcore.dll
+CMD ASPNETCORE_URLS=http://*:$PORT dotnet out/NetCoreBootstrap.dll
