--- a/src/NetCoreBootstrap.csproj
+++ b/src/NetCoreBootstrap.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <CodeAnalysisRuleSet>ca.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>./ca.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Hangfire" Version="1.6.17" />
