--- a/test/NetCoreBootstrap.Tests.csproj
+++ b/test/NetCoreBootstrap.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <CodeAnalysisRuleSet>../NetCoreBootstrap/ca.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>../src/ca.ruleset</CodeAnalysisRuleSet>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
