--- a/.woloxci/config.yml
+++ b/.woloxci/config.yml
@@ -7,9 +7,11 @@ services:
 
 steps:
   analysis:
+    - export DOTNET_CLI_TELEMETRY_OPTOUT=1
     - dotnet build
 
 environment:
   GIT_COMMITTER_NAME: netcore-bootstrap
   GIT_COMMITTER_EMAIL: gustavo.siciliano@wolox.com.ar
   LANG: C.UTF-8
+  DOTNET_CLI_TELEMETRY_OPTOUT: 1
