--- a/.woloxci/config.yml
+++ b/.woloxci/config.yml
@@ -7,11 +7,11 @@ services:
 
 steps:
   analysis:
-    - export DOTNET_CLI_TELEMETRY_OPTOUT=1
+    - export DOTNET_CLI_TELEMETRY_OPTOUT=true
     - dotnet build
 
 environment:
   GIT_COMMITTER_NAME: netcore-bootstrap
   GIT_COMMITTER_EMAIL: gustavo.siciliano@wolox.com.ar
   LANG: C.UTF-8
-  DOTNET_CLI_TELEMETRY_OPTOUT: 1
+  DOTNET_CLI_TELEMETRY_OPTOUT: true
