--- a/.woloxci/config.yml
+++ b/.woloxci/config.yml
@@ -7,7 +7,8 @@ services:
 
 steps:
   analysis:
-    - dotnet build
+    - ls /home/user
+    - ls /usr
 
 environment:
   GIT_COMMITTER_NAME: netcore-bootstrap
