--- a/.woloxci/config.yml
+++ b/.woloxci/config.yml
@@ -7,8 +7,7 @@ services:
 
 steps:
   analysis:
-    - ls /home
-    - ls /usr
+    - dotnet build
 
 environment:
   GIT_COMMITTER_NAME: netcore-bootstrap
