--- a/.woloxci/config.yml
+++ b/.woloxci/config.yml
@@ -7,7 +7,7 @@ services:
 
 steps:
   analysis:
-    - dotnet build
+    - sudo dotnet build
 
 environment:
   GIT_COMMITTER_NAME: netcore-bootstrap
