--- a/.woloxci/Dockerfile
+++ b/.woloxci/Dockerfile
@@ -1,13 +1,12 @@
-FROM microsoft/dotnet:2.0.3-sdk AS builder
+FROM microsoft/dotnet:2.0-sdk
 WORKDIR /app
 EXPOSE 80
 
 # Copy csproj and restore as distinct layers
-# COPY *.sln ./
-# COPY src/*.csproj ./src/
-# COPY test/*.csproj ./test/
-COPY . .
+COPY *.sln ./
+COPY src/*.csproj ./src/
+COPY test/*.csproj ./test/
+RUN dotnet restore
 
-RUN dotnet restore -c Release
-RUN dotnet build -c Release --no-restore  
-RUN dotnet pack -c Release --no-restore --no-build 
+# Copy and build everything else
+COPY . ./
