--- a/.woloxci/config.yml
+++ b/.woloxci/config.yml
@@ -7,6 +7,8 @@ services:
 
 steps:
   analysis:
+    - export DOTNET_CLI_TELEMETRY_OPTOUT=1
+    - printenv
     - ls -la
     - dotnet build --source src/NetCoreBootstrap.csproj
 
