--- a/.woloxci/config.yml
+++ b/.woloxci/config.yml
@@ -8,7 +8,7 @@ services:
 steps:
   analysis:
     - printenv
-    - chmod a+rw .dotnet
+    - chmod a+rw /.dotnet
     - dotnet build
 
 environment:
