Update npm packages

--- a/src/package.json
+++ b/src/package.json
@@ -2,7 +2,7 @@
     "devDependencies": {
         "gulp": "^4.0.0",
         "gulp-concat": "2.6.1",
-        "gulp-cssmin": "0.1.7",
+        "gulp-cssmin": "^0.2.0",
         "gulp-sass": "^3.1.0",
         "gulp-uglify": "2.0.1",
         "rimraf": "2.6.1"
