--- a/NetCoreBootstrap.Api/NetCoreBootstrap.Api.csproj
+++ b/NetCoreBootstrap.Api/NetCoreBootstrap.Api.csproj
@@ -1,16 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.AspNetCore.App"/>
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All"/>
+    <PackageReference Include="LocalizationCultureCore" Version="1.1.2"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="../NetCoreBootstrap.Data/NetCoreBootstrap.Data.csproj" />
-    <ProjectReference Include="../NetCoreBootstrap.Core/NetCoreBootstrap.Core.csproj" />
+    <ProjectReference Include="../NetCoreBootstrap.Data/NetCoreBootstrap.Data.csproj"/>
+    <ProjectReference Include="../NetCoreBootstrap.Services/NetCoreBootstrap.Services.csproj"/>
+    <ProjectReference Include="../NetCoreBootstrap.Core/NetCoreBootstrap.Core.csproj"/>
   </ItemGroup>
 </Project>
