--- a/NetCoreBootstrap.Data/NetCoreBootstrap.Data.csproj
+++ b/NetCoreBootstrap.Data/NetCoreBootstrap.Data.csproj
@@ -1,15 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.4"/>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.4"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="../NetCoreBootstrap.Core/NetCoreBootstrap.Core.csproj" />
+    <ProjectReference Include="../NetCoreBootstrap.Core/NetCoreBootstrap.Core.csproj"/>
   </ItemGroup>
 </Project>
