--- a/NetCoreBootstrap.Services/NetCoreBootstrap.Services.csproj
+++ b/NetCoreBootstrap.Services/NetCoreBootstrap.Services.csproj
@@ -1,11 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App"/>
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All"/>
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.4"/>
     <PackageReference Include="MailKit" Version="2.3.1.6"/>
   </ItemGroup>
 </Project>
