--- a/NetCoreBootstrap.Tests/NetCoreBootstrap.Tests.csproj
+++ b/NetCoreBootstrap.Tests/NetCoreBootstrap.Tests.csproj
@@ -4,8 +4,14 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="28.3.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="../NetCoreBootstrap.Data/NetCoreBootstrap.Data.csproj"/>
+    <ProjectReference Include="../NetCoreBootstrap.Services/NetCoreBootstrap.Services.csproj"/>
+    <ProjectReference Include="../NetCoreBootstrap.Core/NetCoreBootstrap.Core.csproj"/>
   </ItemGroup>
 </Project>
