--- a/NetCoreBootstrap.Core/NetCoreBootstrap.Core.csproj
+++ b/NetCoreBootstrap.Core/NetCoreBootstrap.Core.csproj
@@ -3,6 +3,6 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.4"/>
+    <PackageReference Include="Microsoft.AspNetCore.App"/>
   </ItemGroup>
 </Project>
