--- a/NetCoreBootstrap.Data/NetCoreBootstrap.Data.csproj
+++ b/NetCoreBootstrap.Data/NetCoreBootstrap.Data.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.4"/>
+    <PackageReference Include="Microsoft.AspNetCore.App"/>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.4"/>
   </ItemGroup>
   <ItemGroup>
