--- a/NetCoreBootstrap.Services/NetCoreBootstrap.Services.csproj
+++ b/NetCoreBootstrap.Services/NetCoreBootstrap.Services.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.4"/>
+    <PackageReference Include="Microsoft.AspNetCore.App"/>
     <PackageReference Include="MailKit" Version="2.3.1.6"/>
   </ItemGroup>
 </Project>
