--- a/NetCoreBootstrap.Api/NetCoreBootstrap.Api.csproj
+++ b/NetCoreBootstrap.Api/NetCoreBootstrap.Api.csproj
@@ -4,14 +4,15 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App"/>
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All"/>
-    <PackageReference Include="LocalizationCultureCore" Version="1.1.2"/>
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.4"/>
+    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="LocalizationCultureCore" Version="1.1.2" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.4" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="../NetCoreBootstrap.Data/NetCoreBootstrap.Data.csproj"/>
-    <ProjectReference Include="../NetCoreBootstrap.Services/NetCoreBootstrap.Services.csproj"/>
-    <ProjectReference Include="../NetCoreBootstrap.Core/NetCoreBootstrap.Core.csproj"/>
+    <ProjectReference Include="../NetCoreBootstrap.Data/NetCoreBootstrap.Data.csproj" />
+    <ProjectReference Include="../NetCoreBootstrap.Services/NetCoreBootstrap.Services.csproj" />
+    <ProjectReference Include="../NetCoreBootstrap.Core/NetCoreBootstrap.Core.csproj" />
   </ItemGroup>
 </Project>
