--- a/NetCoreBootstrap.Api/NetCoreBootstrap.Api.csproj
+++ b/NetCoreBootstrap.Api/NetCoreBootstrap.Api.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <DebugType>Full</DebugType>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
