--- a/NetCoreBootstrap.Data/NetCoreBootstrap.Data.csproj
+++ b/NetCoreBootstrap.Data/NetCoreBootstrap.Data.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <DebugType>Full</DebugType>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App"/>
