--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,4 @@ jobs:
     - run: |
         dotnet restore
         dotnet build
-        dotnet test -c Release --no-build
+        dotnet test --no-build
