Fixing main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         DefaultCulture: en-US
         EmailRegex: ^[\\w-\\.]+@([\\w-]+\\.)+[\\w-]{2,4}$
     - name: Testing
-    - run: |
+      run: |
         dotnet restore
         dotnet build
         dotnet test --no-build
