--- a/NetCoreBootstrap.Api/NetCoreBootstrap.Api.csproj
+++ b/NetCoreBootstrap.Api/NetCoreBootstrap.Api.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
     <DebugType>Full</DebugType>
+    <CodeAnalysisRuleSet>../ca.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
