--- a/NetCoreBootstrap.Services/NetCoreBootstrap.Services.csproj
+++ b/NetCoreBootstrap.Services/NetCoreBootstrap.Services.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <DebugType>Full</DebugType>
+    <CodeAnalysisRuleSet>../ca.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App"/>
